--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Hello Habr",
-  "name": "Hello Habr - PWA example",
+  "name": "Cattle Konsul - PWA example",
   "icons": [
     {
       "src": "logo3.jpg",
@@ -16,6 +16,6 @@
   "start_url": "index.html",
   "background_color": "#3367D6",
   "display": "standalone",
-  "scope": "/habr-pwa/hello-habr/",
+  "scope": "/cattle/",
   "theme_color": "#3367D6"
 }
